Update Maven plugins to the latest and greatest